# midtrust

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
contract/src/: escrow.compact
contract/src/managed/escrow/compiler/: contract-info.json
contract/src/managed/escrow/contract/: index.cjs  index.cjs.map  index.d.cts
contract/src/managed/escrow/zkir/: create_deal.zkir  verify_proof.zkir
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
